--- a/mpd-front/src/components/Socks/SocksConnected/Tree/TreeLevel/index.css
+++ b/mpd-front/src/components/Socks/SocksConnected/Tree/TreeLevel/index.css
@@ -19,3 +19,14 @@
 .span-li {
   padding-right: 2px;
 }
+
+button {
+  background: none!important;
+  border: none;
+  padding: auto;
+  /*optional*/
+  font-family: arial, sans-serif;
+  /*input has OS specific font-family*/
+  color: #069;
+  cursor: pointer;
+}
