dnd to playlist

--- a/mpd-front/src/components/Socks/SocksConnected/Playlist/index.css
+++ b/mpd-front/src/components/Socks/SocksConnected/Playlist/index.css
@@ -5,3 +5,14 @@
 .othersong {
     font-size: small;
 }
+
+.full {
+    height: 100%;
+    width: 100%;
+}
+
+.dragging {
+    cursor: -webkit-grabbing;
+    cursor:    -moz-grabbing;
+    cursor:         grabbing;
+}
