--- a/mpd-front/src/components/Socks/SocksConnected/Playlist/index.css
+++ b/mpd-front/src/components/Socks/SocksConnected/Playlist/index.css
@@ -16,3 +16,11 @@
     cursor:    -moz-grabbing;
     cursor:         grabbing;
 }
+
+.disable-select {
+    user-select: none; /* supported by Chrome and Opera */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+}
